Immage correction on blog posts

--- a/content/posts/2020-02-21-surveys.md
+++ b/content/posts/2020-02-21-surveys.md
@@ -4,9 +4,9 @@ title: 'Survey for IT and libraries'
 date: 2020-02-21
 categories: [General]
 hero: true
-heroHeading: ''
+heroHeading: 'Survey for IT and libraries'
 heroSubHeading: ''
-heroBackground: "https://picsum.photos/2560/600?image=872"
+heroBackground: "images/hero_news.jpg"
 ---
 
 SeamlessAccess intends to improve the way people from universities and colleges around the globe access content and services. To better understand the diverse situation in these institutions we have constructed two short surveys, available till *March 27th 2020*:
