Contract Lang WG, other minor updates

--- a/content/posts/2020-06-19-videos.md
+++ b/content/posts/2020-06-19-videos.md
@@ -28,6 +28,6 @@ Future videos will address other core topics around the use of the SeamlessAcces
 
 Over time, we will also expand the range of video features available, including subtitles in multiple languages to improve accessibility.
 
-Our video series can also be found at the [SeamlessAccess YouTube Channel](https://www.youtube.com/watch?v=4xRqdc0DeJI).
+Our video series can also be found at the [SeamlessAccess YouTube Channel](https://www.youtube.com/channel/UCHVM4zXwtO3mKgGxBAwVVaQ).
 
 We welcome your input - please email us at [contact@SeamlessAccess.org](mailto:contact@seamlessaccess.org) if you have feedback or suggestions for future videos.
