Minor edit to FedCM post

--- a/content/posts/2023-02-20-FedCM.md
+++ b/content/posts/2023-02-20-FedCM.md
@@ -4,7 +4,7 @@ title: 'Federated Credential Management (FedCM)'
 date: 2023-02-20
 categories: [General]
 hero: true
-heroHeading: 'Contract Language Model License Agreement 1.0 released'
+heroHeading: 'Federated Credential Management (FedCM)'
 heroSubHeading: ''
 heroBackground: "images/hero_news.jpg"
 ---
